--- a/app/src/main/res/layout/activity_signup_email_verification.xml
+++ b/app/src/main/res/layout/activity_signup_email_verification.xml
@@ -19,9 +19,22 @@
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/logosmall"
-            android:layout_marginTop="60dp"
+            android:src="@drawable/logo2"
+            android:layout_marginTop="40dp"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <!-- Step Indicator -->
+        <TextView
+            android:id="@+id/stepIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Step 4 of 5"
+            android:textSize="12sp"
+            android:textColor="#999999"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/logoImage"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -35,8 +48,8 @@
             android:textStyle="bold"
             android:textColor="#000000"
             android:gravity="center"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@id/logoImage"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/stepIndicator"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
