--- a/app/src/main/res/layout/activity_signup_verification.xml
+++ b/app/src/main/res/layout/activity_signup_verification.xml
@@ -8,6 +8,18 @@
     android:padding="24dp"
     tools:context=".activities.auth.SignUpVerificationActivity">
 
+    <!-- Logo -->
+    <ImageView
+        android:id="@+id/logoImage"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/logo2"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <!-- Progress Indicator -->
     <TextView
         android:id="@+id/progressText"
@@ -17,7 +29,7 @@
         android:textSize="14sp"
         android:textColor="#666666"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logoImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
