--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,8 +61,18 @@
             android:hint="Email"
             android:layout_marginTop="40dp"
             app:startIconDrawable="@drawable/ic_email"
-            app:boxStrokeColor="#2B9D9D"
-            app:hintTextColor="#2B9D9D"
+            app:startIconTint="@color/black"
+            app:boxBackgroundMode="outline"
+            app:boxBackgroundColor="@android:color/transparent"
+            app:boxStrokeColor="@color/black"
+            app:hintTextColor="#666666"
+            app:placeholderTextColor="#999999"
+            app:helperTextTextColor="#666666"
+            android:textColorHint="#999999"
+            app:boxCornerRadiusTopStart="12dp"
+            app:boxCornerRadiusTopEnd="12dp"
+            app:boxCornerRadiusBottomStart="12dp"
+            app:boxCornerRadiusBottomEnd="12dp"
             app:layout_constraintTop_toBottomOf="@id/subtitleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -70,7 +80,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/emailEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:inputType="textEmailAddress"
                 android:textSize="16sp"
                 android:textColor="#000000" />
@@ -85,9 +95,20 @@
             android:hint="Password"
             android:layout_marginTop="16dp"
             app:startIconDrawable="@drawable/ic_lock"
+            app:startIconTint="@color/black"
             app:endIconMode="password_toggle"
-            app:boxStrokeColor="#2B9D9D"
-            app:hintTextColor="#2B9D9D"
+            app:endIconTint="@color/black"
+            app:boxBackgroundMode="outline"
+            app:boxBackgroundColor="@android:color/transparent"
+            app:boxStrokeColor="@color/black"
+            app:hintTextColor="#666666"
+            app:placeholderTextColor="#999999"
+            app:helperTextTextColor="#666666"
+            android:textColorHint="#999999"
+            app:boxCornerRadiusTopStart="12dp"
+            app:boxCornerRadiusTopEnd="12dp"
+            app:boxCornerRadiusBottomStart="12dp"
+            app:boxCornerRadiusBottomEnd="12dp"
             app:layout_constraintTop_toBottomOf="@id/emailLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -95,7 +116,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:inputType="textPassword"
                 android:textSize="16sp"
                 android:textColor="#000000" />
